--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -12,7 +12,6 @@ description:
 
 人类视觉系统简直就是一个世界奇迹。看一下接下来的手写体数字序列：     
 <center>
-
 ![enter description here][1]     
 </center>
 大部分人都能很容易认出这些数字是：504192。你可能觉得这很不靠谱。在我们每个人的大脑中，都有一个初级视觉皮层，也被称为V1。它包含140*10^6个神经元，而这些神经元之间又有百亿种连接。实际上人类视觉活动不是仅仅只有一个V1层，而是由一系列的视觉皮层-V2，V3，V4和V5。这些视觉皮层在逐层地做更复杂的图像处理工作。我们的大脑好比一个超级计算机，通过成千上万年的进化在逐渐地调整参数，来逐渐理解这个可视化的世界。识别手写体数字不是那么容易。我们人类能够很神奇地理解我们的眼睛呈现给我们的，但是基本上这些工作都是在无意识中完成的。当然了，我们通常根本不了解我们的视觉系统在解决多么困难的问题。    
@@ -22,8 +21,8 @@ description:
 
 神经网络用完全不同的方法来解决这个问题。它拿很多的手写体数字（被称为训练集），     
 <center>     
+![training examples][2]    
 
-![training examples][2]     
 </center>
 之后从这些训练集中学习。换句话说，神经网络使用训练样本来推测规则，进而识别手写体数字。通过增加训练集的数量，神经网络便能够学习到更多关于手写体数字的**关系**[?]，在这里我仅使用了一百个例子，也许我们可以通过增加上千个甚至百万千万的训练样本来造一个更好的识别系统。     
 
@@ -39,7 +38,8 @@ description:
 那么感知器是如何工作的呢？一个感知器接收若干**二进制**（binary?）输入,<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2, \ldots">然后产生一个二进制输出：
 <center>    
 
-![enter description here][3]
+![enter description here][3]     
+
 </center>
 这个例子中的感知器有三个输入,<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2,x_3, \ldots">。一般来说它可以有更多或者更少的输入。Rosenblatt提出了一种简单的规则来计算输出---权重：<img src="http://www.forkosh.com/mathtex.cgi? w_1, w_2, \ldots">用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。输入的加权和<img src="http://www.forkosh.com/mathtex.cgi? \sum_j w_j x_j">大于或者小于阈值（threshold value）决定了神经元的输出是0或1。阈值就像权重一样是个实数，同样也是神经元的一个参数。我们用精确的代数式来表达：     
 
@@ -117,7 +117,12 @@ description:
 
 </center>      
 
+现在，我已经将像<img src="http://www.forkosh.com/mathtex.cgi?x_1 x_2">这样的两个变量画在了感知器网络的最左边。实际上，传统上我们再画一层额外的感知器---输入层---来编码输入。
+<center>      
 
+![enter description here][11]
+
+</center>      
 
 
 
@@ -131,3 +136,4 @@ description:
   [8]:http://7xomz3.com1.z0.glb.clouddn.com/06.jpg
   [9]:http://7xomz3.com1.z0.glb.clouddn.com/07.jpg
   [10]:http://7xomz3.com1.z0.glb.clouddn.com/08.jpg
+  [10]:http://7xomz3.com1.z0.glb.clouddn.com/09.jpg
