--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -117,12 +117,19 @@ description:
 
 </center>      
 
-现在，我已经将像<img src="http://www.forkosh.com/mathtex.cgi?x_1 x_2">这样的两个变量画在了感知器网络的最左边。实际上，传统上我们再画一层额外的感知器---输入层---来编码输入。
+现在，我已经将像<img src="http://www.forkosh.com/mathtex.cgi?x_1 x_2">这样的两个变量画在了感知器网络的最左边。实际上，传统上我们再画一层额外的感知器---输入层---来编码输入。      
+
 <center>      
 
 ![enter description here][11]
 
 </center>      
+这个输入感知器算式没有输入只有输出。       
+<center>      
+
+![enter description here][12]
+
+</center>
 
 
 
@@ -136,4 +143,5 @@ description:
   [8]:http://7xomz3.com1.z0.glb.clouddn.com/06.jpg
   [9]:http://7xomz3.com1.z0.glb.clouddn.com/07.jpg
   [10]:http://7xomz3.com1.z0.glb.clouddn.com/08.jpg
-  [10]:http://7xomz3.com1.z0.glb.clouddn.com/09.jpg
+  [11]:http://7xomz3.com1.z0.glb.clouddn.com/09.jpg
+  [12]:http://7xomz3.com1.z0.glb.clouddn.com/10.jpg
