--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -124,13 +124,13 @@ description:
 ![enter description here][11]
 
 </center>      
-这个输入感知器算式没有输入只有输出。       
+这个输入感知器算式没有输入只有输出，算是一种速记法       
 <center>      
 
 ![enter description here][12]
 
 </center>
-
+它并不是
 
 
   [1]:http://7xomz3.com1.z0.glb.clouddn.com/00.png?imageView2/2/w/220
