--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -130,7 +130,7 @@ description:
 ![enter description here][12]
 
 </center>
-它并不是
+它并不是没有
 
 
   [1]:http://7xomz3.com1.z0.glb.clouddn.com/00.png?imageView2/2/w/220
