--- a/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
+++ b/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
@@ -32,5 +32,16 @@ description:
     - 不悔改的人，因自己的骄傲就听不进神的话而拒绝
 
 ## 耶稣论世人  
-1. 上的人多半是幼稚并自我中心，只要人家与他的感觉与看法不同就批抨    
+1. 世上的人多半是幼稚并自我中心，只要人家与他的感觉与看法不同就批抨    
 2. 智慧 = 敬畏神 参 箴 9：10 但敬畏神的人从神的眼光来看事
+
+## 爱、信与赦免     
+1. 这法利赛人请耶稣吃饭，却不以客礼来待耶稣
+2. 一个听过主褔音且接受了的妓女 (女罪人) 来用香膏抹耶稣的脚       
+3. 法利赛人以为远离罪人是圣洁，事实上**远离罪才是圣洁**    
+4. 因此法利赛人以为耶稣不知道这女人是妓女，并断定他不是先知     
+5. 耶稣就用比喻对这法利赛人西门说 (一两银子 = 十天工资)
+
+
+
+
