--- a/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
+++ b/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
@@ -29,7 +29,7 @@ description:
 3. 众人的反应 (7：29 – 30)
     - 受约翰的洗 = 悔改
     - 悔改的人，听见神的话就明白而接受
-    - 不悔改的人，因自己的骄傲就听不进神的话而拒绝
+    -.不悔改的人，因自己的骄傲就听不进神的话而拒绝
 
 ## 耶稣论世人  
 1. 世上的人多半是幼稚并自我中心，只要人家与他的感觉与看法不同就批抨    
@@ -40,7 +40,15 @@ description:
 2. 一个听过主褔音且接受了的妓女 (女罪人) 来用香膏抹耶稣的脚       
 3. 法利赛人以为远离罪人是圣洁，事实上**远离罪才是圣洁**    
 4. 因此法利赛人以为耶稣不知道这女人是妓女，并断定他不是先知     
-5. 耶稣就用比喻对这法利赛人西门说 (一两银子 = 十天工资)
+5. 耶稣就用比喻对这法利赛人西门说 (一两银子 = 十天工资)    
+    - 我们都欠了神的债 (犯罪) 都无法偿还，神愿开恩免我们的债
+    - 凡悔改接受耶稣恩免的，就清楚知道自己领受了恩典
+    - 清楚知道自己领受了恩典的人，就会产生感恩、爱神的心
+    - 不觉得自己得了恩典的人 (骄傲的人) 就少有感恩、爱神的心
+    - 信心使人蒙恩，蒙恩使人感恩
+    - 感恩产生对神的爱
+    - 这女人爱耶稣的表现源于她的信心
+    - 因此耶稣宣告她的信救了她，她的罪都得赦免
 
 
 
