--- a/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
+++ b/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
@@ -33,8 +33,8 @@ description:
 
 ## 耶稣论世人  
 1. 世上的人多半是幼稚并自我中心，只要人家与他的感觉与看法不同就批抨    
-2. 智慧 = 敬畏神 参 箴 9：10 但敬畏神的人从神的眼光来看事
-
+2. 智慧 = 敬畏神 参 箴 9：10 但敬畏神的人从神的眼光来看事  
+3. 对于基督徒：我们很多时候也是这样---既不为罪忧伤，也不为属灵的事情而喜悦
 ## 爱、信与赦免     
 1. 这法利赛人请耶稣吃饭，却不以客礼来待耶稣
 2. 一个听过主褔音且接受了的妓女 (女罪人) 来用香膏抹耶稣的脚       
