--- a/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
+++ b/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
@@ -6,9 +6,15 @@ tags: 路加福音  查经
 keywords: 
 description: 
 ---
-# 信心面面观 (1 – 10)
-## 施洗约翰的信心因环境而动摇 (7：18 – 23) 参 太 11：2 – 6 
-1. 由马太福音知道当时约翰被希律下在监中
+# 第8章
+## 同工团队： (8：1 – 3)
+1. 同工团队 – 耶稣及十二使徒
+2. 支持团队 – 蒙了恩典的，以时间及财物支持圣工
+
+## 撒种的比喻： (8：4 – 15) 参 太 13：3 – 23；可 4：3 – 20
+1. 种子 → 神的道      
+    - 对还没有信的人是得救恩之道     
+    - 对己信的人是成圣之道
 2. 他本知道耶稣就是那位神所应许的弥赛亚     
     - 在母腹中的启示 参 路 1：41 – 45    
     - 在耶稣受洗时 参 路 3：22；约 1：32 - 34    
