--- a/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
+++ b/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
@@ -15,10 +15,14 @@ description:
 1. 种子 → 神的道      
     - 对还没有信的人是得救恩之道     
     - 对己信的人是成圣之道
-2. 他本知道耶稣就是那位神所应许的弥赛亚     
-    - 在母腹中的启示 参 路 1：41 – 45    
-    - 在耶稣受洗时 参 路 3：22；约 1：32 - 34    
-3. 一方面约翰听见耶稣行神迹的大能，但自己在监中耶稣却没有来救他，因此他的信心动摇而差两个门徒去问耶稣，祂是否就是神所差来的那一位？    
+2. 撒种的人 → 传扬神道的人     
+3. 四种土地 → 四种人心     
+    - 路旁 – 人车行走，路面压实，种子无法进入土中。     
+      心 – 接受许多世上学说，心己刚硬，拒绝神的道
+    - 土浅石头地(太13：5) – 可发芽长苖，因底下有石头无法生根，无法长大      
+    心 –起初可接受，但心中的成见使神的道无法生根长大
+    - 荆棘地 – 可发芽长苖生根，但苗会被荆棘挤住而无法长大     
+    心 – 接受了真道，成为信徒，但被思虑、钱财、宴乐挤
 4. 耶稣指出祂所行的就是在以赛亚书 29：18 – 19 节中预言弥赛亚所行的    
 5. 然祂是神，行事的主权在祂，不要因祂没有按我们的意思行就信心动摇       
 
