--- a/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
+++ b/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
@@ -22,14 +22,18 @@ description:
     - 土浅石头地(太13：5) – 可发芽长苖，因底下有石头无法生根，无法长大      
     心 –起初可接受，但心中的成见使神的道无法生根长大
     - 荆棘地 – 可发芽长苖生根，但苗会被荆棘挤住而无法长大     
-    心 – 接受了真道，成为信徒，但被思虑、钱财、宴乐挤
-4. 耶稣指出祂所行的就是在以赛亚书 29：18 – 19 节中预言弥赛亚所行的    
-5. 然祂是神，行事的主权在祂，不要因祂没有按我们的意思行就信心动摇       
+    心 – 接受了真道，成为信徒，但被思虑、钱财、宴乐挤住      
+    - 好土 – 适合种子生长的土，结实百倍     
+    心 – 诚实善良的心     
+4. 如何准备人的心      
+    - 路旁 → 松土也就是除去正面抗拒的原因
+    - 石头地 → 除石也就是除去隐藏的拦阻
+    - 荆棘地 → 除荆棘也就是除出世上的思虑，钱财的迷惑
 
-## 施洗约翰是谁？ (7：24 – 30)     
-1. 耶稣指出施洗约翰的身份 (7：26 – 27)      
-    - 他是旧约先知中的一位，并且是最大的先知     
-        >    * 旧约先知最主要的信息是预言弥赛亚及救恩的来临
-        >    * 约翰却有褔份看见并介绍这位弥赛亚
-        >    * 由于他所传讲的弥赛亚是最清楚的，因此他是先知中最大的
-        >    * 他就是那位在以赛亚 40：3 – 9 所预言将要来主的先锋  
+
+
+## 听道与传道 (8：16 – 18)     
+1. 信徒是世上的光，不要把真道藏起来，要努力传扬出去
+2. 要传扬真道，要先注意的听，注意学
+3. 愈学的好的就愈会传，愈努力传的，就知道的更多
+4. 愈不传扬的，连原有的一点也会失去
