概率图模型

--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -17,7 +17,8 @@ description:
 
     [袁勇的博客](yongyuan.name)
 
-    [小村长的博客](blog.csdn.net/lu597203933)  CNN以及深度学习方向
+    [小村长的博客](blog.csdn.net/lu597203933/)       
+CNN以及深度学习方向
     
 2.  <h3>待读列表</h3>
 
@@ -29,7 +30,8 @@ description:
     
     [甘宇飞](https://yufeigan.github.io/)      
     
-    [ufldl学习笔记](http://blog.csdn.net/linger2012liu/article/category/2146595)
+    [ufldl学习笔记](http://blog.csdn.net/linger2012liu/article/category/2146595)      
+    [暑期学习.概率图模型](http://www.cs.cmu.edu/~epxing/Class/10708-14/lecture.html)
     
 
 3.  <h3>感知机</h3>
