--- a/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
+++ b/_posts/圣经/2016-01-26-路加福音第8章第一部分.md
@@ -36,4 +36,12 @@ description:
 1. 信徒是世上的光，不要把真道藏起来，要努力传扬出去
 2. 要传扬真道，要先注意的听，注意学
 3. 愈学的好的就愈会传，愈努力传的，就知道的更多
-4. 愈不传扬的，连原有的一点也会失去
+4. 愈不传扬的，连原有的一点也会失去      
+
+
+## 肉身与属灵的关系 (8：19 – 21)
+1. 耶稣的母亲及兄弟因他废寝忘食而担心 参 可 3：20 – 21
+2. 他们来劝他不要太热心了
+3. 耶稣指出肉身的关系虽亲，但还有属灵的关系
+4. 凡重生得救的信徒，彼此都是弟兄姊妹
+5. 凡遵行神旨意的都为亲属
