--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -24,10 +24,22 @@ description:
 ## 出污鬼显明耶稣是灵界的主 (8：26 – 39)     
 在查考赶鬼之前必先要对“鬼附”有一些了解
 #### 什么叫被鬼附？
-1. 信徒是世上的光，不要把真道藏起来，要努力传扬出去
-2. 要传扬真道，要先注意的听，注意学
-3. 愈学的好的就愈会传，愈努力传的，就知道的更多
-4. 愈不传扬的，连原有的一点也会失去      
+1. 魔鬼或邪灵控制了人的思想，意志及身体。      
+     - 有明显的超自然或反自然的行为，例如希特勒     
+     - 有明显的超自然或反自然的行为，我们今天所查主要是这一种        
+
+#### 与精神病的分别 
+<p>精神病是由于生理或心理的因素导至思想或精神的混乱
+二者有时相似而难以分辨，分别是导至反常的力量不同。因此解决的方法也不同。
+</p>   
+
+
+#### 怎么会被鬼附？
+1. 自己求来的 – 想由鬼得利益，得能力
+2. 不断的，连续的犯罪
+3. 作祟      
+    - 别人用鬼来作祟
+    - 想用鬼害人反被鬼附
 
 
 ## 肉身与属灵的关系 (8：19 – 21)       
