--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -40,7 +40,7 @@ description:
 3. 作祟      
     - 别人用鬼来作祟
     - 想用鬼害人反被鬼附
-
+4. 其它原因
 
 ## 肉身与属灵的关系 (8：19 – 21)       
 1. 耶稣的母亲及兄弟因他废寝忘食而担心 参 可 3：20 – 21
