--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -40,7 +40,10 @@ description:
 3. 作祟      
     - 别人用鬼来作祟
     - 想用鬼害人反被鬼附
-4. 其它原因
+4. 其它原因   
+
+#### 信徒会不会被鬼附？ 
+<p>理论上不会。因有圣灵的内住，魔鬼，邪灵不能住在信徒里面。但信徒会被魔鬼</p>
 
 ## 肉身与属灵的关系 (8：19 – 21)       
 1. 耶稣的母亲及兄弟因他废寝忘食而担心 参 可 3：20 – 21
