--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -43,7 +43,9 @@ description:
 4. 其它原因   
 
 #### 信徒会不会被鬼附？ 
-<p>理论上不会。因有圣灵的内住，魔鬼，邪灵不能住在信徒里面。但信徒会被魔鬼</p>
+<p>理论上不会。因有圣灵的内住，魔鬼，邪灵不能住在信徒里面。但信徒会被魔鬼：</p>     
+1. 引诱 – 用精神或物质来吸引信徒想或做不合神心意的事。当信徒长期的接受引诱也就是间接的被魔鬼控制。解决的办法不是赶鬼却是认罪悔改。例如烟鬼，赌鬼     
+2. 攻击 – 用环境或外力来逼信徒做不合神心意的事。当信徒长期的屈服在这压力下就间接的被魔鬼控制。解决的办法是向神支取力量胜过压力。
 
 ## 肉身与属灵的关系 (8：19 – 21)       
 1. 耶稣的母亲及兄弟因他废寝忘食而担心 参 可 3：20 – 21
