--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -47,9 +47,10 @@ description:
 1. 引诱 – 用精神或物质来吸引信徒想或做不合神心意的事。当信徒长期的接受引诱也就是间接的被魔鬼控制。解决的办法不是赶鬼却是认罪悔改。例如烟鬼，赌鬼     
 2. 攻击 – 用环境或外力来逼信徒做不合神心意的事。当信徒长期的屈服在这压力下就间接的被魔鬼控制。解决的办法是向神支取力量胜过压力。
 
-## 肉身与属灵的关系 (8：19 – 21)       
-1. 耶稣的母亲及兄弟因他废寝忘食而担心 参 可 3：20 – 21
-2. 他们来劝他不要太热心了
-3. 耶稣指出肉身的关系虽亲，但还有属灵的关系
-4. 凡重生得救的信徒，彼此都是弟兄姊妹
-5. 凡遵行神旨意的都为亲属
+
+### 本段经文
+1. 鬼附的征状     
+    - 力大无穷
+    - 不穿衣服，住在坟莹里
+    - 自己伤害自己
+
