--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -53,4 +53,11 @@ description:
     - 力大无穷
     - 不穿衣服，住在坟莹里
     - 自己伤害自己
+2. 鬼不只认识耶稣还会求耶稣。
+3. 好像需要附在生物身上
+4. 为什么耶稣淮群鬼附在猪身上？
+**讨论：为什么众人求耶稣离开？**
+	      **为什么耶稣不要这人跟随？**
+
+
 
