--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -57,7 +57,13 @@ description:
 3. 好像需要附在生物身上
 4. 为什么耶稣淮群鬼附在猪身上？
 **讨论：为什么众人求耶稣离开？**
-	      **为什么耶稣不要这人跟随？**
+	      **为什么耶稣不要这人跟随？**     
 
+## 医好血漏显明耶稣是信心的主 (8：43 – 48)
+1. 这女人有需要，但不敢直接求耶稣。原因可能是：     
+    - 血漏是不洁净的病，不可与人接触 参 利 15：25 – 27
+    - 自卑，血漏的来源可能是罪  
+    - 受传统或习惯约束
+2. 她凭信心来摸耶稣的衣裳繸子，就立刻好了
 
 
