--- a/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
+++ b/_posts/圣经/2016-02-21-路加福音第8章第二部分.md
@@ -64,6 +64,25 @@ description:
     - 血漏是不洁净的病，不可与人接触 参 利 15：25 – 27
     - 自卑，血漏的来源可能是罪  
     - 受传统或习惯约束
-2. 她凭信心来摸耶稣的衣裳繸子，就立刻好了
+2. 她凭信心来摸耶稣的衣裳繸子，就立刻好了  
+3. 耶稣一定要这女人来到祂面前
+4. 为要给她更大的恩典就是由罪中得救    
+**讨论：在我们的周围也有许多有需要的人，但不愿公开来教会
+	   你是否认识这样的人？
+	   他们可能的原因是什么？
+	   我们教会、团契、查经班及基督徒该做什么？**    
+
+## 死人复活显明耶稣是生命的主 (8：40 – 42；49 – 56)  
+1.	睚鲁来求耶稣医治他重病的女儿
+2.	人敢相信也敢求病得医治
+3.	很多人不敢相信也不敢求死人复活
+4.	五十节中耶稣告诉他们，信心所带来的能力是无限的
+5.	信心带来的远超过属世的能力，可带来属灵的赦罪与救恩
+6.	虽人嗤笑耶稣，祂没有因人有限的信心而生气或不管
+7.	祂看见睚鲁的信心 – 没有因别人觉得不必再请耶稣而改变
+8.	耶稣使睚鲁的女儿复活
+
+**讨论；这四个神迹由不同的方面显明耶稣是全能的神**
+
 
 
