--- a/_posts/圣经/2016-03-10-路加福音第9章.md
+++ b/_posts/圣经/2016-03-10-路加福音第9章.md
@@ -13,3 +13,8 @@ description:
     **讨论：耶稣完全可以供给门徒生活上的需要，为什么衪要他们靠人的供应？**
 2. 要做的工作 – 传神国的道 (医治灵魂)，医治身体
 3. 门徒蒙差遣就带着信息与能力出去
+4. 差遣的果效
+    - 褔音传的更快、更广  
+    - 引起多人的注意，包括希律王的注意与疑虑
+
+
