--- a/_posts/圣经/2016-03-10-路加福音第9章.md
+++ b/_posts/圣经/2016-03-10-路加福音第9章.md
@@ -15,6 +15,12 @@ description:
 3. 门徒蒙差遣就带着信息与能力出去
 4. 差遣的果效
     - 褔音传的更快、更广  
-    - 引起多人的注意，包括希律王的注意与疑虑
+    - 引起多人的注意，包括希律王的注意与疑虑    
+
+## 饼二鱼吃饱五千人  (9：11 – 17) 参 约 6：5 – 13  
+1. 有一大群人约五千人跟随耶稣听衪讲神国的道
+2. 听了很久直到傍晚
+3. 门徒考虑到这一大群人食、宿的问题
+4. 耶稣却要门徒供给众人食物
 
 
