--- a/_posts/圣经/2016-03-10-路加福音第9章.md
+++ b/_posts/圣经/2016-03-10-路加福音第9章.md
@@ -17,10 +17,24 @@ description:
     - 褔音传的更快、更广  
     - 引起多人的注意，包括希律王的注意与疑虑    
 
-## 饼二鱼吃饱五千人  (9：11 – 17) 参 约 6：5 – 13  
+## 五饼二鱼吃饱五千人  (9：11 – 17) 参 约 6：5 – 13  
 1. 有一大群人约五千人跟随耶稣听衪讲神国的道
 2. 听了很久直到傍晚
 3. 门徒考虑到这一大群人食、宿的问题
 4. 耶稣却要门徒供给众人食物
+5. 按约 6：9 有一个孩子把自己的五饼二鱼献给耶稣  
+6. 耶稣接受了，望着天祝福、擘开、递给门徒摆在众人面前
+7. 区区的五饼二鱼就供应了五千人，还剩下了十二篮
+**思想：这是一个很大的神迹，更重要的是
+耶稣顾到人属灵及属世的需要。今天信徒及教会也当如此
+当我们像这孩子一样，把自己有的一点献上给主，主就能用这一点使多人得褔。我们是否愿献上？
+当主要门徒分饼与鱼时，虽看起来很可笑，但当门徒顺服去做时神迹就发生了。我们能否凭着信心先顺服？
+主的恩典，不单够用，还会有余**
+
+
+## 开始认识耶稣就是基督 (9：18 – 22)
+1. 经过一年多的跟随，彼得认得了主就是基督 (弥赛亚，救世主)
+2. 耶稣开始告诉门徒祂的受苦，受死及复活
+3. 今天人说耶稣是谁？
 
 
