--- a/_posts/圣经/2016-03-10-路加福音第9章.md
+++ b/_posts/圣经/2016-03-10-路加福音第9章.md
@@ -36,5 +36,10 @@ description:
 1. 经过一年多的跟随，彼得认得了主就是基督 (弥赛亚，救世主)
 2. 耶稣开始告诉门徒祂的受苦，受死及复活
 3. 今天人说耶稣是谁？
-
-
+**讨论：你说耶稣是谁？**
+## 跟随服事主的道路与奖赏 (9：23 – 27)
+1. 当门徒认识耶稣是基督时，主就告诉他们跟随主的代价
+    - 要舍己
+    - 天天背起自己的十字架
+    **讨论：什么叫背自己的十架？**
+2. 人的三重选择：
