--- a/_posts/圣经/2016-03-10-路加福音第9章.md
+++ b/_posts/圣经/2016-03-10-路加福音第9章.md
@@ -43,3 +43,8 @@ description:
     - 天天背起自己的十字架
     **讨论：什么叫背自己的十架？**
 2. 人的三重选择：
+    - 是否单顾属肉体的生命而牺牲属灵的生命
+    - 是否拼命赚金钱，名誉，地位而忽略属灵的生命
+    - 要不在乎人的讥笑而承认主，还是怕人的笑而不敢公开承认主
+**讨论：我们的选择是什么？**
+3. 神的国是指五旬节，圣灵降临，教会开始
