--- a/_posts/圣经/2015-03-31-路加福音第10章第二部分.md
+++ b/_posts/圣经/2015-03-31-路加福音第10章第二部分.md
@@ -6,7 +6,32 @@ tags: 路加福音  查经
 keywords: 
 description: 
 ---
-
-
+## 好撒玛利亚人的比喻 (10：25 – 37)  圣经中最有名的比喻之一
+### 主旨：爱你的邻舍
+1. 背景：律法师来试探耶稣问耶稣“我该做什么才可承受永生”
+    - 如果耶稣说要遵行律法就是完全同意犹太教的看法
+若耶稣说任何律法以外的事，就成为攻击的借口
+    - 耶稣的回答使他完全抓不到把柄，他再问“谁是我的邻舍？”
+    - 犹太人口头的遗传认为，邻舍一定是犹太人 (外邦人不是爱的对象)
+        i.	如果耶稣同意这看法，就与耶稣宣告神的恩典要临到外邦违反
+        ii.	  如果耶稣要把非犹太人算做邻舍，会引起犹太人的反感
+2. 对象：律法师 → 知法却利用法律，走法律漏洞的人
+3. 比喻：
+    - 耶路撒冷 → 圣城，高处
+    - 耶利哥 → 罪恶之城，低地
+    - 受害的人 → 故意没有说明他的背景
+    - 强盗 → 伤害人的 (通往耶利哥路上的强盗是有名的)
+    - 祭司 → 宗教领袖。可能用 利 21：1 为借口而不帮助此人
+    - 利未人 → 全职事奉的人
+    - 撒玛利亚人 → 犹太人看不起的人 参 约 4：9
+    - 油，酒，包褢 → 供应立刻的需要
+    - 店中的照应 → 供应到困难及需要过去
+4. 教训：
+    - 邻舍按定意是双方的。甲是乙的邻舍，乙就一定是甲的邻舍
+    - 属灵的邻舍不是：
+        i 按背景，种族或距离远近
+        ii 值不值得爱 (帮助) (这人遇强盗有一点“活该”)
+    - 邻舍是一切需要帮助，需要爱的人
+    - 顺服神并爱人远超过宗教上的身份，地位与知识
 
 
