--- a/_posts/圣经/2016-03-31-路加福音第10章2.md
+++ b/_posts/圣经/2016-03-31-路加福音第10章2.md
@@ -6,6 +6,11 @@ tags: 路加福音  查经
 keywords: 
 description: 
 ---
+---
+## 差遣：(10：1 – 16)
+1. 当时己有一群人一直跟随耶稣，对耶稣所传己明白也看了主的生活
+2. 就由这群人中选了七十人 (这些人信主最多才一年多)
+3. 组成两人小组 – 彼此扶持，彼此代祷
 
 ## 好撒玛利亚人的比喻 (10：25 – 37)  圣经中最有名的比喻之一
 ### 主旨：爱你的邻舍
