--- a/_posts/圣经/2015-12-05-路加福音第6章.md
+++ b/_posts/圣经/2015-12-05-路加福音第6章.md
@@ -8,17 +8,17 @@ description:
 ---   
 
 ### 第五章
-  5.  禁食
+1.  禁食
       A.    背景：按摩西律法每年在赎罪日为对自己的罪忧伤而禁食，在旧约的以赛亚 58：3 – 11，指出神对禁食的心意。（另见约拿书3：5-10）    
 
       B.    法利赛人一周禁食二次，以禁食来表明他们的虔诚   
       
       C.    耶稣有禁食  (太 4：2) 并教导禁食的原则    
       
-            a.  不要做给人看 参 太 6：16 – 18
-            b.  与主同在的日子，是喜乐的日子不需要禁食   
+    - 不要做给人看 参 太 6：16 – 18
+    - 与主同在的日子，是喜乐的日子不需要禁食   
             
-  6.  新旧难合的比喻  (5：36 – 39)；参 太 9：14 – 17；可 2：18 – 22  
+2.  新旧难合的比喻  (5：36 – 39)；参 太 9：14 – 17；可 2：18 – 22  
      A.    背景：施洗约翰的门徒及法利赛人因耶稣的门徒不禁食来责问耶稣   
 
      B.    对象：施洗约翰的门徒及法利赛人 → 持守固有的想法及规条的人   
@@ -38,7 +38,7 @@ description:
 
 ### 第六章
 #### 论安息日 (6：1 – 11)   
-   A.   6：1 门徒所做的事是圣经所允许 (参申 23：25)   
+1. 6：1 门徒所做的事是圣经所允许 (参申 23：25)   
    
    B.   犹太人口头的遗传不允许在安息日“收割”    
    
@@ -57,26 +57,20 @@ description:
 
 
 #### 选十二使徒 (6：12 – 16)   
-A.    召首六徒 – 约 1：29 – 51；太 4：18 – 22；可 1：16 – 20；路 5：1 – 11    
-
-把这三段不完全相同的记戴连在一起就可得到下列的过程：   
-约翰的记载第一次的接触并强调见证的果效       
-
-A.       安得烈及雅各是跟随施洗约翰的。因施洗约翰的见证而与耶稣一同生活了一天，而确定耶稣就是弥赛亚。第二天安得烈就向他哥哥彼得见证耶稣是基督         
-
-B.    主呼召腓力，他与彼得，安得烈是同乡。可能因他们的见证而跟随主。    
-
-C.    腓力向拿但业见证主。拿但业因见到主，经历主而确知耶稣是神的儿子     
-
-D.    这事之后彼得，安得烈及雅各回到加利利
+1. 召首六徒 – 约 1：29 – 51；太 4：18 – 22；可 1：16 – 20；路 5：1 – 11
+2. 把这三段不完全相同的记戴连在一起就可得到下列的过程：   
+约翰的记载第一次的接触并强调见证的果效  
+    - 安得烈及雅各是跟随施洗约翰的。因施洗约翰的见证而与耶稣一同生活了一天，而确定耶稣就是弥赛亚。第二天安得烈就向他哥哥彼得见证耶稣是基督    
+    - 主呼召腓力，他与彼得，安得烈是同乡。可能因他们的见证而跟随主。    
+3. 腓力向拿但业见证主。拿但业因见到主，经历主而确知耶稣是神的儿子    
+4. 这事之后彼得，安得烈及雅各回到加利利
 福音书记载主在加利利海边正式呼召他们四人全时间跟随主做得人鱼夫     
 
-E.    路加记载得满网鱼的神迹。豫表他们以后在福音上的成果     
-  
-<strong>福音书强调他们四人立刻撇下所有跟随了主</strong>     
+5. 路加记载得满网鱼的神迹。豫表他们以后在福音上的成果     
+ <strong>福音书强调他们四人立刻撇下所有跟随了主</strong>     
 
-F.	召马太 – 参上课讲义    
+6.	召马太 – 参上课讲义    
 
-G.	设立十二使徒 – 太10：1 – 4；可 3：13 – 19；路 6：12 – 16
+7.	设立十二使徒 – 太10：1 – 4；可 3：13 – 19；路 6：12 – 16
 设立之前耶稣出去上山祷告．整夜祷告神。
 <strong>耶稣为什么也呼召了买主的犹大？</strong>
