--- a/_posts/圣经/2015-12-05-路加福音第6章.md
+++ b/_posts/圣经/2015-12-05-路加福音第6章.md
@@ -19,22 +19,20 @@ description:
     - 与主同在的日子，是喜乐的日子不需要禁食   
             
 2.  新旧难合的比喻  (5：36 – 39)；参 太 9：14 – 17；可 2：18 – 22  
-     A.    背景：施洗约翰的门徒及法利赛人因耶稣的门徒不禁食来责问耶稣   
+    - 背景：施洗约翰的门徒及法利赛人因耶稣的门徒不禁食来责问耶稣   
 
-     B.    对象：施洗约翰的门徒及法利赛人 → 持守固有的想法及规条的人   
+    - 对象：施洗约翰的门徒及法利赛人 → 持守固有的想法及规条的人   
   
-     C.    比喻：      
-     
+    - 比喻：  
              a.  新布 → 新的道德观念    
              b.  旧衣服 → 旧的行为规条   
              c.  新酒 → 新的灵；新的生命
              d.  旧皮袋 → 旧的魂；旧的心意 (Mind)      
              
-     D.    教训：      
-     
-            a    主所教导新的合神心意的道德观念 (以登山宝训为例) 不是用来弥补，改善旧的规条    
-            b    新的生命需要一个更新的心意 (mind) 参 罗 12：1 – 2   
-            c    从感觉上来讲，人总是喜欢旧的习惯，旧的观念
+    - 教训：
+            a.    主所教导新的合神心意的道德观念 (以登山宝训为例) 不是用来弥补，改善旧的规条    
+            b.   新的生命需要一个更新的心意 (mind) 参 罗 12：1 – 2   
+            c.    从感觉上来讲，人总是喜欢旧的习惯，旧的观念
 
 ### 第六章
 #### 论安息日 (6：1 – 11)   
