--- a/_posts/圣经/2015-12-05-路加福音第6章.md
+++ b/_posts/圣经/2015-12-05-路加福音第6章.md
@@ -37,14 +37,13 @@ description:
 ### 第六章
 #### 论安息日 (6：1 – 11)   
 1. 6：1 门徒所做的事是圣经所允许 (参申 23：25)   
+    - 犹太人口头的遗传不允许在安息日“收割”    
    
-   B.   犹太人口头的遗传不允许在安息日“收割”    
+    - 耶稣以大卫的例子 (撒上 21：1 – 6) 指出神的心意不是要守这些规条到了伤害人的地步     
    
-   C.    耶稣以大卫的例子 (撒上 21：1 – 6) 指出神的心意不是要守这些规条到了伤害人的地步     
+    - 又藉安息日治病指明在安息日行善，救命是合神心意的   
    
-   D.    又藉安息日治病指明在安息日行善，救命是合神心意的   
-   
-   E.    6：5 所记“人子是安息日的主” 与马可 2：27“安息日是为人设立的，人不是为安息日设立的”都指明神的心意不在乎死守规条而是要人在安息日使心灵与身体都得益、蒙褔。
+    - 6：5 所记“人子是安息日的主” 与马可 2：27“安息日是为人设立的，人不是为安息日设立的”都指明神的心意不在乎死守规条而是要人在安息日使心灵与身体都得益、蒙褔。
 
 **讨论：其他“宗教”中禁食，节日等与我们的禁食，安息日（主日）有什么不同？(罗马书14：5-6)**   
 
