--- a/_posts/圣经/2015-11-23-路加福音第4章.md
+++ b/_posts/圣经/2015-11-23-路加福音第4章.md
@@ -37,15 +37,15 @@ description:
 
 3. 他在地上的事工
 
-    A. 传福音给贫穷的人
+    - 传福音给贫穷的人
    
-    B. 报告给被掳的得释放
+    -  报告给被掳的得释放
    
-    C. 瞎眼的得看见
+    -  瞎眼的得看见
    
-    D. 叫那受压制的得自由
+    -  叫那受压制的得自由
    
-    E. 报告神悦纳人的禧年 (参利 25：8 – 38)
+    - 报告神悦纳人的禧年 (参利 25：8 – 38)
 
 4. 这就是弥赛亚的事工，主也宣告祂就是弥赛亚
 
@@ -54,8 +54,8 @@ description:
 1. 人喜欢看人的背景来判断人，决定是否接纳人
 2. 加利利人虽被他的信息吸引，却因耶稣平凡的家世而轻看祂
 3. 耶稣就以二个历史事件
-    A. 伊莱贾与撒勒法的寡妇 参 王上 17：1 – 16
-    B. 伊莱沙与叙利亚的乃缦 参 王下 5：1 – 14
+    - . 伊莱贾与撒勒法的寡妇 参 王上 17：1 – 16
+    - . 伊莱沙与叙利亚的乃缦 参 王下 5：1 – 14
 4. 来指明犹太人常不看重神的恩典，神要使这恩典临到外邦人
 5. 会堂的人十分愤怒就要杀耶稣
 6. 耶稣一再的宣告外邦人也要承受神的恩典，这成了犹太人要除去耶稣主要的原因之一
@@ -69,17 +69,16 @@ description:
 <strong>讨论：什么叫话语有权柄？</strong>
 
 2.	耶稣赶鬼
-    A.	被鬼附的人喊叫
-    a	承认耶稣可以灭魔鬼，承认耶稣是神的圣者
-    B.	鬼为什要说这些话？鬼怎么在会堂里？
+    - 	被鬼附的人喊叫
+        i	承认耶稣可以灭魔鬼，承认耶稣是神的圣者
+    - 	鬼为什要说这些话？鬼怎么在会堂里？
 
 3.	耶稣医病
 
-    A.	西门的岳母病一被治好就起来服事
-
+    - 	西门的岳母病一被治好就起来服事
 <strong>讨论：我们由此学到什么功课？</strong>       
 
-    B.	多人被医好，鬼被赶出
+    - 	多人被医好，鬼被赶出
 
 4.	耶稣宣告神国的福音要遍传
 
