--- a/_posts/圣经/2016-04-06-约翰福音第5章查经笔记.md
+++ b/_posts/圣经/2016-04-06-约翰福音第5章查经笔记.md
@@ -6,4 +6,47 @@ tags: 约翰福音  查经
 keywords: 
 description: 
 ---
-<h1>圣父与圣子(5：1 – 47)</h1>
+<h1>圣父与圣子(5：1 – 47)</h1>     
+<h3>这段的主题是圣父与圣子的关系，引到这主题的是在安息医好瘫子</h3>
+
+###  安息日医治瘫子  5:1 – 16
+1. 这病人没有也无法去寻找耶稣，乃是耶稣来找到他并问他“你要痊愈么？”正如同我们罪人没有也不会寻找救主，乃是耶稣来找到我们并告诉我们救赎的恩典
+2. 这病人不知道也从未想过“不需要自己努力的恩典”。人一般的想法“自助天助” 正如同我们罪人也从未想过“白白的恩典
+3. 主的一句话就医好了他
+4. 这人的反应
+    - 太高兴都没有问耶稣是谁
+    - 主对他的警告指出他以前因犯罪而遭病痛
+    - 知道犹太人要逼迫那医好他的人，还去告诉犹太人
+    - 那天是安息日，就引起了犹太人的逼迫    
+
+
+###  父与子的关系 5：17 - 47
+1. 同工 17
+    - 创造万有
+    - 启示真道，成就救恩
+2. 同等 18；23
+    - 与神同质 (Homoousios)、同等、同尊、同荣 – 尼西亚信经
+3. 父要藉子行更大 (以前未行过) 的事 19 – 20
+    - 为世人生，为罪人死
+    - 为信的人准备永生
+4. 父将审判的权柄及赐生命的权力交给子 21 – 30
+    - 人都死在罪中，只有神 (父及子) 能使死在罪中的人再活过来 (21)
+    - 父将审判的权交给子，因为：
+           i 他降世为人，成为人子，完成赎罪之工 (27)
+           ii 他虽成肉身，却还是神，当受同样的尊崇 (23)
+    - 审判的主命定，听主的话 (褔音) 而信的人就不被定罪，反得永生 (24)
+    - 福音要传开，死在罪中的人要听到褔音而得生命 (25)
+    - 父将赐生命的权柄也给了子 (26) 参 约壹 5：11
+    - 当子再来时人都要复活，接受最后的审判 (28 – 29)
+5. 父与子关系的见证 31 – 47
+    - 施洗约翰的见证 (33 – 35)
+    - 主事工的见证 (36)
+    - 天父的见证 (32, 37 – 38)
+    - 圣经的见证 (39) 
+
+###  人的背逆 5：40 – 47
+1. 不肯来得生命，因先要承认自己是死在罪中的 (40)
+2. 不接待衪，因主没有在世上的地位，尊荣 (41 – 44)
+3. 不信主，因为不信也不明白神藉先知所写的旧约 (45 – 47)
+
+
