--- a/_posts/圣经/2016-04-06-约翰福音第5章查经笔记.md
+++ b/_posts/圣经/2016-04-06-约翰福音第5章查经笔记.md
@@ -1,12 +1,13 @@
 ---
 layout: post
-title: 路加福音第13章
+title: 路加福音第62章查经笔记
 category: 圣经
 tags: 路加福音  查经
 keywords: 
-description: 
----
+description:  
+---   
 
+### 第五章
 <h1>圣父与圣子(5：1 – 47)</h1>     
 <h3>这段的主题是圣父与圣子的关系，引到这主题的是在安息医好瘫子</h3>
 
