--- a/_posts/圣经/2016-05-27-路加福音第11章查经笔记下.md
+++ b/_posts/圣经/2016-05-27-路加福音第11章查经笔记下.md
@@ -35,19 +35,18 @@ Luke 11:34-35 (Amplified Bible)
         
 ### 法利赛/律法师六祸 (11：37 – 53)       
 
-背景：法利实人严守宗教的礼仪，轻看不守礼仪的人
-	律法师是明白律法，并解释律法，用来在公会的审判中辩论的人，有如今天的
-律师，在犹太社会中这些人多半是法利赛人。
-	耶稣指出他们基本的错误就是假冒伪善 – 只顾外表好看，内心却污秽。
-	进一步以六祸指出法利赛人及律法师 (文士) 的六种错误
+背景：法利实人严守宗教的礼仪，轻看不守礼仪的人         
+	律法师是明白律法，并解释律法，用来在公会的审判中辩论的人，有如今天的律师，在犹太社会中这些人多半是法利赛人。       
+	耶稣指出他们基本的错误就是假冒伪善 – 只顾外表好看，内心却污秽。          
+	进一步以六祸指出法利赛人及律法师 (文士) 的六种错误      
 #### 法利赛人三祸:    
-1.	对神严谨的奉献物质，却不献上心 (11：42)
-2.	要世上的地位及称赞，却不求神的喜悦 (11：43)
-3.	外表看似圣洁却把自己的罪 (死行) 隐藏起来 (11：44)
-#### 律法师 (又称文士) 三祸:
-4.	严格要求别人，却宽待自己 (11：46)
-5.	修造己死先知的坟墓，却逼迫杀害活着的先知 (11：47 – 51)
-6.	自己不遵行真理，又用错误的教导使人不能遵行真理 (11：52)
-结论：神看重并对我们要求的是
+1.	对神严谨的奉献物质，却不献上心 (11：42)      
+2.	要世上的地位及称赞，却不求神的喜悦 (11：43)      
+3.	外表看似圣洁却把自己的罪 (死行) 隐藏起来 (11：44)      
+#### 律法师 (又称文士) 三祸:      
+4.	严格要求别人，却宽待自己 (11：46)      
+5.	修造己死先知的坟墓，却逼迫杀害活着的先知 (11：47 – 51)      
+6.	自己不遵行真理，又用错误的教导使人不能遵行真理 (11：52)     
+**结论：神看重并对我们要求的是:**      
 1.	内心的顺从，而不是外表的礼仪
 2.	要求自己遵行神的道，而不是用来要求别人
