--- a/_posts/圣经/2016-06-03-路加福音第12章.md
+++ b/_posts/圣经/2016-06-03-路加福音第12章.md
@@ -7,8 +7,9 @@ keywords:
 description: 
 ---
 
-## 路 加 褔 音
-### 第二十二课：价值观的再思 (12：1 – 34)
+
+### 路加褔音
+####  第二十二课：价值观的再思 (12：1 – 34)
 
 今天查考的经文可分为三段      
 #### 当怕的和不需要怕的 (12：1 – 12)     
