--- a/_posts/论文/2017-08-03-系统常用服务.md
+++ b/_posts/论文/2017-08-03-系统常用服务.md
@@ -8,7 +8,7 @@ description:
 ---
 
 
-+ **向表中插入数据**
++ **MAC**
 insert [into] 表名[(列名1，列名2....)] values (值1，值2...);
 <pre><code>
 eg: 给samp_db数据库中的student表插入一条记录：
@@ -30,31 +30,4 @@ update 表名称 set 列名称=新值 where 更新条件
 将所有人的年龄增加1：update students set age=age+1
 将手机号为1303的姓名改为"你们" update students set names="你们" where tel="1303"
 </code></pre>
-
-
-----------
-**创建后，表的修改**
-  * **添加列**
-    基本形式：alter table 表名 add 列名 列数据类型[after 插入位置]
-   示例：<pre><code>在表的最后追加列address:alter table students add address char(60);
-在名为age的列侯插入列birth：alter table students add birth date after age;
-</code></pre>
-
-----------
-
-*  **修改列**
-   基本形式： alter table 表名 change 列名 列新名 新数据类型
-示例：<pre><code>将表tel列改为telphone：alter table students change tel telphone char(13) default "-"
-讲name列的数据类型改为char(16):alter table students change name name char(16) not null;
-</code></pre>
-*  **删除列**
- 基本形式：alter table  表名 drop 列名称
-*  **重命名表**
-   基本形式：alter table 表名 rename 新表名
-*  **删除整张表**
- 基本形式：drop table 表名
-*  **删除整个数据库**
-  基本形式：drop database 数据库名；
-
-
 
