--- a/_posts/论文/2017-08-03-系统常用服务.md
+++ b/_posts/论文/2017-08-03-系统常用服务.md
@@ -8,26 +8,6 @@ description:
 ---
 
 
-+ **MAC**
-insert [into] 表名[(列名1，列名2....)] values (值1，值2...);
-<pre><code>
-eg: 给samp_db数据库中的student表插入一条记录：
-   insert into student values(NULL,"王刚","男"...);
-   或者：
- insert into student(name,sex,age) values ("安兴乐","男"...)
-</code></pre>
-+  **查询表中数据**
-select 列名称 from 表名称 [查询条件]
-<pre><code>
-select name,age from student;
-也可使用通配符 *
-select * from student;
-</code></pre>
-+ **更新表中数据**
-update 表名称 set 列名称=新值 where 更新条件
-<pre><code>
-将id为5的手机改为默认的update students set tel=default where id=5;
-将所有人的年龄增加1：update students set age=age+1
-将手机号为1303的姓名改为"你们" update students set names="你们" where tel="1303"
-</code></pre>
-
++ **查看端口占用**
+终端输入：lsof -i tcp:port 将port换成被占用的端口(如：8086、9998)
+将会出现占用端口的进程信息。
