--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 系统服务
-category: 论文
+category: 计算机
 tags: 数据库
 keywords: 
 description: 
@@ -11,3 +11,12 @@ description:
 + **查看端口占用**
 终端输入：lsof -i tcp:port 将port换成被占用的端口(如：8086、9998)
 将会出现占用端口的进程信息。
+
+
++ **安装memcache**
+brew install memcached 
+安装完成后，使用如下命令启动memcached：
+memcached -m 32 -p 11211 -d
+
+
+
