--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -18,7 +18,11 @@ description:
 
 brew install memcached 
 安装完成后，使用如下命令启动memcached：
-memcached -m 32 -p 11211 -d
+memcached -m 32 -p 11211 -d         
+
+      
+**GIT 使用https记住密码**      
+使用git config credential.helper store为当前仓库设置记住密码。只要运行一次pull/push就不用再输密码了。
 
 
 
