--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -22,7 +22,13 @@ memcached -m 32 -p 11211 -d
 
       
 **GIT 使用https记住密码**      
-使用git config credential.helper store为当前仓库设置记住密码。只要运行一次pull/push就不用再输密码了。
+使用git config credential.helper store为当前仓库设置记住密码。只要运行一次pull/push就不用再输密码了。   
+
+**Jupyter notebook设置**        
+Jupyter notebook作为强大的草稿纸，笔记本，绘图工具...实在太强大了，反正就是万能工具，默认主题太丑了。可以给它加上[漂亮的主题](https://github.com/dunovank/jupyter-themes),如果做教程或者其他需要添加目录的东西，那么[外挂必不可少](https://github.com/ipython-contrib/jupyter_contrib_nbextensions)。       
+**MAC鼠标滚轮反向**        
+MAC的鼠标与触摸板都是采用的自然滑滚，这对于频繁切换windows／mac的人简直要崩溃：鼠标滚轮不一样啊。那么推荐可以单独对MAC的鼠标与触摸板进行[滑滚设置的插件](https://github.com/pilotmoon/Scroll-Reverser)。
+
 
 
 
