--- a/_posts/论文/2017-08-11-文本分类.md
+++ b/_posts/论文/2017-08-11-文本分类.md
@@ -9,5 +9,8 @@ description:
 
 # CNN在文本分类中的应用
 ## 字符级别的识别      
-早期深度学习在自然语言上的应用比较暴力，直接把数据往CNN里怼。[文章Text Understanding from Scratch](https://arxiv.org/abs/1502.01710)解释了为啥子CNN也能对文本分类：它先对字符集做了一个类似盲文的编码，将字符编码为定长（l）的向量，然后送入CNN网络
+早期深度学习在自然语言上的应用比较暴力，直接把数据往CNN里怼。[文章Text Understanding from Scratch](https://arxiv.org/abs/1502.01710)解释了为啥子CNN也能对文本分类：它先对字符集做了一个类似盲文的编码，将字符编码为定长（l）的向量，然后送入CNN网络来分类。       
+![Text Understanding from scratch](https://raw.githubusercontent.com/anxingle/anxingle.github.io/77839987b9aaf5ac1dcc0403874b325513260496/public/img/ML/text_1.png)          
+          文章厉害的地方在于直接把所有的文本（中文换成拼音）直接怼进去，然后就能取得很厉害的分类结果。表示怀疑，有空了重复实验。还有一篇文章[CNN for Sentence Classification](https://arxiv.org/abs/1408.5882)稍有改进，把文本进行word embedding后，再送入了CNN。
+![CNN for sentence Classification](https://raw.githubusercontent.com/anxingle/anxingle.github.io/77839987b9aaf5ac1dcc0403874b325513260496/public/img/ML/text_2.png),Max-pooling后得到固定长度的feature map。
 **太忙了，占坑，过几天再填**
