--- a/_posts/论文/2017-08-11-文本分类.md
+++ b/_posts/论文/2017-08-11-文本分类.md
@@ -2,10 +2,12 @@
 layout: post
 title: 深度学习在文本分类中的应用
 category: 论文
-tags: 机器学习 计算机科学
-keywords: 机器学习
+tags: 计算机科学
+keywords: 
 description: 
 ---
+
+
 
 # CNN在文本分类中的应用
 ## 字符级别的识别      
