--- a/_posts/论文/2017-08-11-文本分类.md
+++ b/_posts/论文/2017-08-11-文本分类.md
@@ -1,11 +1,12 @@
 ﻿---
 layout: post
-title: 深度学习在文本分类中的应用
-category: 论文
-tags: 数学  机器学习
+title: 文本分类
+category: 计算机
+tags: 数据库
 keywords: 
 description: 
----    
+---
+
 
 
 
