--- a/_posts/论文/2017-08-11-文本分类.md
+++ b/_posts/论文/2017-08-11-文本分类.md
@@ -1,9 +1,9 @@
 ﻿---
 layout: post
-title: 文本分类
-category: 计算机
-tags: 数据库
-keywords: 
+title: 深度学习在文本分类中的应用
+category: 论文
+tags: 机器学习 计算机科学
+keywords: 机器学习
 description: 
 ---
 
