增加一点东西

--- a/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
+++ b/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
@@ -28,7 +28,11 @@ $P(S_{t+1}|S_{t})=P(S_{t+1}|S_{t},S_{t-1},...,S_{0})$。再通俗点讲就是未
 
 <img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/ML/RL_2.png" width="400">               
 
-根据上图，我们知道大雄采取某一种行动还会有额外的“奖励”。虽然睡觉比学习的状态得分低，但是“奖励”高：睡觉可以梦到静香，学习可能会倍受打击。大雄继续采取某个行动后，Q表会再次的“更新”（添加新状态，或者更改值）。大雄脑子一抽风，决定学习了，这次发现学习后不再是啥都不会了，而是成绩有所提高，于是这个状态下的行为终于有了好的效果。于是我们更新这个Q表：                       
+根据上图，我们知道大雄采取某一种行动还会有额外的“奖励”。虽然睡觉比学习的状态得分低，但是“奖励”高：睡觉可以梦到静香，学习可能会倍受打击。大雄继续采取某个行动后，Q表会再次的“更新”（添加新状态，或者更改值）。大雄脑子一抽风，决定学习了，这次发现学习后不再是啥都不会了，而是成绩有所提高，于是这个状态下的行为终于有了好的效果。           
+<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/ML/RL_3.png" width="500">         
+
+
+于是我们更新这个Q表：                       
 
 
 |...|.睡觉.|.学习.|
@@ -36,6 +40,9 @@ $P(S_{t+1}|S_{t})=P(S_{t+1}|S_{t},S_{t-1},...,S_{0})$。再通俗点讲就是未
 | S1 | -2 | -1 |
 | S2 | -4 | 1 |
 
+这里的Q表显示如果大雄继续睡觉，那么他的状态就比较糟糕了；如果他一直学习的话，开始的S1可能也不是很好，但是S2状态下的学习会变好一点（坚持学习起效果了）。      
+
+那么他到底应该如何来做出选择呢（这里请忘掉我们已经有的先验知识：“好好学习才是正道”，因为我们是从白痴的状态来的）？
 （未完待续）
 
 
