--- a/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
+++ b/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
@@ -8,7 +8,7 @@ description:
 ---
 
 <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 # 什么是增强学习      
 简单通俗来讲就是Agent在Environment中探索找到最优策略Policy，使得Reward最多的学习策略（游戏）。它是一个MDP（Markov Decision Process）马尔可夫决策过程：一个状态$S_{t}$是MarKov当且仅当
