--- a/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
+++ b/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
@@ -12,7 +12,7 @@ description:
 简单通俗来讲就是Agent在Environment中探索找到最优策略Policy，使得Reward最多的学习策略（游戏）。它是一个MDP（Markov Decision Process）马尔可夫决策过程：一个状态$S_{t}$是MarKov当且仅当
 $P(S_{t+1}|S_{t})=P(S_{t+1}|S_{t},S_{t-1},...,S_{0})$。再通俗点讲就是未来只取决于现在。         
 
-不过扯这么个概念无非显摆数学很重要，[西瓜树](https://book.douban.com/subject/26708119/)讲的更加的深入，我就是从[西瓜树](https://book.douban.com/subject/26708119/)学的。不过按我这里讲的，你可以不用再从头推这么多大头的公式就可以大致理解算法过程。      
+不过扯这么个概念无非显摆数学很重要，[西瓜书](https://book.douban.com/subject/26708119/)讲的更加的深入，我就是从[西瓜书](https://book.douban.com/subject/26708119/)学的。不过按我这里讲的，你可以不用再从头推这么多大头的公式就可以大致理解算法过程。      
 ## Q表
 我们假设刚开始遇见一个新的环境，不知道这里的生存法则，那就需要探索来找到每种“动作”所产生的“效益”（反馈），以后在这个环境中的行为就可以基于长时间在这里学习到的经验来决策。假设我们的生活就像游戏：和下面的大雄一样，刚来到这个世界上，父母还真就没告诉我们那些大道理“好好学习才能挣大钱”，那么我们就需要自己来长时间的反复探索(一切可以重来，但必须从头来过)。     
 
