测试数学公式

--- a/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
+++ b/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
@@ -64,7 +64,7 @@ Q目标和Q现实之间有一个差距（理想与现实之间总是有差距的
 
 	初始化 状态S      
 	重复(游戏中每一步)：
-		以𝜖的概率选择S状态中最大收益的动作，1-𝜖的概率随机选择动作
+		以𝜖的概率选择S状态中最大收益的动作，1-𝜖的概率随机$Q(𝑆_{t},𝐴_{t})$选择动作
 		执行完动作后，观察Reward和新的状态S’
 		Q(St,At) ← $Q(𝑆_{t},𝐴_{t}) + 𝛼*(𝑅_{t+1}+𝜆*max_{𝑎}𝑄(𝑅_{𝑡+1},𝑎))−𝑄(𝑆_{𝑡},𝐴_{𝑡})$
 		S  ← S’
