--- a/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
+++ b/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
@@ -58,16 +58,7 @@ Q目标和Q现实之间有一个差距（理想与现实之间总是有差距的
 我们需要明白，在开始的时候，我们随便初始化了一个Q表，里面都是随机值，并不精确，我们只能通过每一次的行动，让Q值不断的逼近$R + 𝛾*maxQ(S)$。，上述更新迭代公式，不正像极了反向传导中的梯度更新吗？
 我们引入Q-learning的算法流程：         
 
-初始化Q(s, a)∀𝑠∈𝑆, 𝑎∈A(s) 为任意值       
-
-重复(对每一次迭代)：       
-    初始化 状态S      
-    重复(游戏中每一步)：
-        以𝜖的概率选择S状态中最大收益的动作，1-𝜖的概率随机$Q(𝑆_{t},𝐴_{t})$选择动作
-        执行完动作后，观察Reward和新的状态S’
-        Q(St,At) ← $Q(𝑆_{t},𝐴_{t}) + 𝛼*(𝑅_{t+1}+𝜆*max_{𝑎}𝑄(𝑅_{𝑡+1},𝑎))−𝑄(𝑆_{𝑡},𝐴_{𝑡})$
-        S  ← S’
-    循环直到S终止       
+<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/ML/RL_4.png" width="350">
 
 ## 实例
 
