--- a/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
+++ b/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
@@ -65,7 +65,7 @@ Q目标和Q现实之间有一个差距（理想与现实之间总是有差距的
 ## 实例
 
 （未完待续）            
-<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/5d487280881d954ddc87cdb1cb44395d3b3e6291/public/img/money_1.png" width="300">
+<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/5d487280881d954ddc87cdb1cb44395d3b3e6291/public/img/money_1.png" width="200"><img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/money_2.jpeg" width="200">
 
 
 
