--- a/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
+++ b/_posts/论文/2017-09-06-简单的增强学习-实例精讲-概念篇.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 简单的增强学习实例讲解：概念篇
+title: 简单的强化习实例讲解：概念篇
 category: 论文
 tags: 计算机科学
 keywords: 
@@ -8,7 +8,7 @@ description:
 ---
 
 
-# 什么是增强学习      
+# 什么是强化学习      
 简单通俗来讲就是Agent在Environment中探索找到最优策略Policy，使得Reward最多的学习策略（游戏）。它是一个MDP（Markov Decision Process）马尔可夫决策过程：一个状态$S_{t}$是MarKov当且仅当
 $P(S_{t+1}|S_{t})=P(S_{t+1}|S_{t},S_{t-1},...,S_{0})$。再通俗点讲就是未来只取决于现在。         
 
