--- a/_posts/圣经/2017-10-27-使徒行传第1章.md
+++ b/_posts/圣经/2017-10-27-使徒行传第1章.md
@@ -16,11 +16,11 @@ description:
     - C.文化背景: 基本上以希腊文化为主 .通用的文字是希腊文而非拉丁文.希臘文化重哲学思想.对各种學說相当宽容接納.十分有利於福音的传佈 .
     - D.宗教背景 : 猶太人是以猶太教為主 . 但猶太教又分二大支派 – 法利賽派(基 要派 , 敬虔派 , 文士) 及撒都該派 (形式主义 , 现实派, 祭司) . 保罗是法利賽派的學者及領袖 . 二派都反对并逼迫基督徒 . 罗马帝国以希腊宗教为主.是一种多神偶像的宗教.他们反对基督教最重要的理由是基督教反对偶像 .
 
-## 查考重点 : 圣灵在教会中的工作，全书又可稱“圣灵行传”
+### 查考重点 : 圣灵在教会中的工作，全书又可稱“圣灵行传”
 1. 主耶穌升天前就告诉门徒向普天下传福音的 “能力” 及 “方向” 來自圣灵. 五旬节圣灵降临 , 使徒及门徒得着能力 , 宣讲福音多人得救 . 教会时代开始 . 
 2. 以后三十几年中圣灵带领教会一步步的长大成熟以成就把福音传遍天下的大使命 . 由本书可看见圣灵在教会中工作的 “原则” 及 “方式”
 
-## 分段大纲:全卷可分为下列六段:
+### 分段大纲:全卷可分为下列六段:
 1. 宣告并准备圣灵的降临 (1)
 2. 圣灵的降临 (2)
 3. 圣灵带领建立第一个教会 (3 – 7)
@@ -32,7 +32,7 @@ description:
 7. 圣灵继续带领教会往前成就神的心意 – 教会历史
     以後的教会历史是使徒行传的延续，直到主再來，教会被提
 
-## 应用
+### 应用
 1. 体会圣灵的 “心意” 明白圣灵工作的 “原則” 学习如何支取圣灵的 “能 力”.
 2. 与众同工一同寻求圣灵对我們教会及团契的指引与方向 .
 3. 寻求圣灵給我个人的 “恩賜” (Gift) , 順服圣灵給我的 “任务” (Mission)
