--- a/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
+++ b/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
@@ -17,9 +17,7 @@ description:
 
 
 
-
-
-<center><embed src="https://github.com/anxingle/webapp/blob/master/static/_chainer.pdf" width="850" height="600"></center>
+<center><embed src="/public/img/pdf/chainer.pdf" width="850" height="600"></center>
 
 
 
