--- a/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
+++ b/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
@@ -17,7 +17,7 @@ description:
 
 
 
-<center><embed src="/public/img/pdf/chainer.pdf" width="850" height="600"></center>
+<center><embed src="/public/img/pdf/chainer.pdf" width="900" height="550"></center>
 
 
 
@@ -26,22 +26,20 @@ description:
 现在的深度学习研究进展非常之快，各种网络不断推陈出新，比如：
 
 > 首先我们来看一下目前流行框架的开发团队和他们开发框架的驱动力：
-
+>
 > Caffe：贾扬清和伯克利视觉实验室的小伙伴们开发。开始主要是自己用，属于需求驱动。
-
+>
 > Torch：Yann LeCun的学生。需求驱动。
-
+>
 > Theano：Yoshua Benjio的学生。用于自己科研，但是也发了系统的paper，属于需求＋科研驱动。
-
+>
 > Tensorflow：Jeff Dean带领的Google员工，主要是系统出身。源于Google在AI领域的布局需求，资本驱动。
-
+>
 > Neon：nervana员工，作为创业公司的产品。资本驱动。
-
+>
 > MXNet：DMLC（主要是华人机器学习和分布式系统学生）的小伙伴。主要是Minerva，Purine，和cxxnet的开发团队合在一起，一半搞机器学习的，一半搞系统的。需求＋兴趣驱动。
-
-> 剩下还有很多搞系统的人出于兴趣或者科研目的开发的框架，但大多没有流行起来，就不再赘述了。
-
-> 可以看出，除了Google强推的Tensorflow，大多都是从自用和兴趣开始的。而* Tensorflow的开发经费比其他所有框架的经费加起来还要多出几十倍，但是一年下来并没能一统江湖 *。可见需求驱动的力量，所谓“需要是发明之母”。
+>
+> 剩下还有很多搞系统的人出于兴趣或者科研目的开发的框架，但大多没有流行起来，就不再赘述了。可以看出，除了Google强推的Tensorflow，大多都是从自用和兴趣开始的。而* Tensorflow的开发经费比其他所有框架的经费加起来还要多出几十倍，但是一年下来并没能一统江湖 *。可见需求驱动的力量，所谓“需要是发明之母”。
 >
 > 引自：[做底层 AI 框架和做上层 AI 应用，哪个对自己的学术水平（或综合能力）促进更大？]( https://www.zhihu.com/question/52820499/answer/138716362)
 
