--- a/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
+++ b/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
@@ -11,7 +11,7 @@ description:
 ## 动态计算图模型时代      
 经典的深度学习框架比如caffe，mxnet，tensorflow等都是使用的静态计算图模型（当然最近tensorflow推出新的Execution模式—Eager，mxnet也开始使用新的前端框架Gluon…这是后话），也就是先定义一个计算图，然后往里面“喂”数据，这是经典的Define-and-Run模式…..（我也不知道继续该怎么编了，反正大家都知道怎么用tensorflow和caffe，就是和我们用numpy不一样）直到[Chainer](http://learningsys.org/papers/LearningSys_2015_paper_33.pdf)横空出世，引入了动态图机制，让深度学习研究工作者眼前焕然一新，pytorch也来了，春天近了。   
 
-可以说Chainer的引入的动态图机制是革命性的，不得不佩服日本人开发的这款框架，简介好用，代码基于python，易于阅读，实在是居家旅行不可不少的休闲阅读佳作，这对于连**计算图**是个啥球的我来说，简直太棒了！不多说了，我们拿出[论文](http://learningsys.org/papers/LearningSys_2015_paper_33.pdf)，结合[代码](https://github.com/chainer/chainer)，一睹为快。
+可以说Chainer的引入的动态图机制是革命性的，不得不佩服日本人开发的这款框架，简介好用，代码基于python，易于阅读，实在是居家旅行不可不少的休闲阅读佳作，这对于连**计算图**是个啥球的我来说，简直太棒了！不多说了，我们拿出[论文](http://learningsys.org/papers/LearningSys_2015_paper_33.pdf)（满篇都是日式英语，不知道怎么过的盲审），结合[代码](https://github.com/chainer/chainer)，一睹为快。
 
 <center><embed src="/public/img/pdf/chainer.pdf" width="900" height="550"></center>
 
@@ -53,9 +53,9 @@ description:
 
 这里问题就出来了： 模型在定义后就占据了内存，内存利用率很低；而且一旦定义后，用户无法在对它进行修改，可扩展性很差（caffe的各种版本已经泛滥成灾）；最麻烦的是如何来对它Debug呢？这些框架像一个黑盒子一样，对用户是不可访问的！      
 + 动态计算图定义方式：
-      
+  ​    
 
-<img src="http://p28sk9doh.bkt.clouddn.com/b.png" width="300" style="float:center">     
+<img src="http://p28sk9doh.bkt.clouddn.com/b.png" width="300">     
 
 Chainer作为原生的python库（？）让我们可以直接使用pdb就能debug程序。而且整个过程就像曾经写其他原生python代码一样爽歪歪！这里我们定义一个多层感知机      
 
@@ -88,7 +88,7 @@ y.backward()
 print("x. grad:   ", x.grad)
 ```
 在这里，你定义了一个计算通过x得到y，然后backward就能得到导数！这样子我们只需要定义一个网络的结构，无需操心网络的反向过程就行了（当然了，Tensorlow，Pytorch等也有）。
-      
+​      
 
 <img src="http://p28sk9doh.bkt.clouddn.com/d.jpg" width="400" style="float:centers">      
 
