--- a/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
+++ b/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
@@ -93,6 +93,9 @@ print("x. grad:   ", x.grad)
 <img src="http://p28sk9doh.bkt.clouddn.com/d.jpg" width="400" style="float:centers">      
 
 接下来，我们需要打开Pycharm（debug很方便啊），一步一步的看数据的流动，解构反向求导的过程。
+
+<center><embed src="http://p324ywv2g.bkt.clouddn.com/chainer.pdf" width="900" height="550"></center>
+
 ## chainer/variable.py
 
 ## chainer/function_node.py
